TRekt_3D/Debug/TRekt_3D.log
C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\VC\VCTargets\Microsoft.Cpp.props(31,3): warning MSB4011: "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\VC\VCTargets\Microsoft.Makefile.props" cannot be imported again. It was already imported at "C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.cpp.props (31,3)". This is most likely a build authoring error. This subsequent import will be ignored. [D:\Github\TRekt_3D\TRekt_3D\TRekt_3D.vcxproj]
  main.cpp
  arm-none-eabi-g++ -MMD -MP -MF /d/Github/TRekt_3D/TRekt_3D/build/main.d -g -Wall -O2 -mword-relocations -fomit-frame-pointer -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/d/Github/TRekt_3D/TRekt_3D/include -I/c/devkitPro/libctru/include -I/c/devkitPro/portlibs/armv6k/include -I/c/devkitPro/portlibs/3ds/include -I/d/Github/TRekt_3D/TRekt_3D/build -DARM11 -D_3DS -fno-rtti -fno-exceptions -std=gnu++11 -c /d/Github/TRekt_3D/TRekt_3D/source/main.cpp -o main.o 
d:/Github/TRekt_3D/TRekt_3D/source/main.cpp(19,9): warning G22EB126D: #pragma once in main file
   #pragma once
           ^~~~
  linking TRekt_3D.elf
  main.o: In function `main':
  d:/Github/TRekt_3D/TRekt_3D/source/main.cpp:69: undefined reference to `ensureDSP()'
collect2.exe : error : ld returned 1 exit status
  make[1]: *** [/d/Github/TRekt_3D/TRekt_3D/TRekt_3D.elf] Error 1
  make: *** [build] Error 2
C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.MakeFile.Targets(41,5): error MSB3073: The command "make" exited with code 2.
